[gd_scene format=3 uid="uid://bxwuh3tovjog"]

[ext_resource type="Script" uid="uid://c3cts3ujnwu8f" path="res://follower_enemy/follower_enemy.gd" id="1_we3hf"]
[ext_resource type="Texture2D" uid="uid://dt8uhwwsl3qt3" path="res://Ninja Adventure - Asset Pack/Actor/Monsters/Slime2/Slime2.png" id="2_4rbx3"]
[ext_resource type="PackedScene" uid="uid://dvk8ofnxjkd0q" path="res://components/damage/damage_component.tscn" id="3_hkvc3"]
[ext_resource type="PackedScene" uid="uid://eq00otqnti1x" path="res://components/knockback/knockback_component.tscn" id="4_badg0"]
[ext_resource type="AudioStream" uid="uid://kx6qluhyi2a3" path="res://SNES - The Legend of Zelda_ A Link to the Past - Miscellaneous - Sound Effects/enemy hit.wav" id="5_gc2r6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofsxj"]
atlas = ExtResource("2_4rbx3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppra6"]
atlas = ExtResource("2_4rbx3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p200p"]
atlas = ExtResource("2_4rbx3")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmsee"]
atlas = ExtResource("2_4rbx3")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwld"]
atlas = ExtResource("2_4rbx3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vj3"]
atlas = ExtResource("2_4rbx3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffra"]
atlas = ExtResource("2_4rbx3")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e355f"]
atlas = ExtResource("2_4rbx3")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_78jik"]
atlas = ExtResource("2_4rbx3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3pv7"]
atlas = ExtResource("2_4rbx3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoplw"]
atlas = ExtResource("2_4rbx3")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yflr"]
atlas = ExtResource("2_4rbx3")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf88j"]
atlas = ExtResource("2_4rbx3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbw0t"]
atlas = ExtResource("2_4rbx3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjonb"]
atlas = ExtResource("2_4rbx3")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rovcg"]
atlas = ExtResource("2_4rbx3")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_scxef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofsxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppra6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p200p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmsee")
}],
"loop": true,
"name": &"walk down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e355f")
}],
"loop": true,
"name": &"walk left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78jik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3pv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoplw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yflr")
}],
"loop": true,
"name": &"walk right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf88j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbw0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjonb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rovcg")
}],
"loop": true,
"name": &"walk up",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p200p"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ofsxj"]
radius = 10.049875

[sub_resource type="Animation" id="Animation_1wwld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_pmsee"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.20000002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1.0, 0.0, 1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1wwld"]
_data = {
&"RESET": SubResource("Animation_1wwld"),
&"hurt": SubResource("Animation_pmsee")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pmsee"]
radius = 8.0

[node name="FollowerEnemy" type="CharacterBody2D" unique_id=1588866589]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_we3hf")
movement_speed = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=155526234]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_scxef")
animation = &"walk right"
frame_progress = 0.14631328

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2566815]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_p200p")

[node name="DamageComponent" parent="." unique_id=1429838472 instance=ExtResource("3_hkvc3")]
position = Vector2(0, 2)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="DamageComponent" index="0" unique_id=1061504655]
shape = SubResource("CircleShape2D_ofsxj")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="KnockbackComponent" parent="." unique_id=1500406809 node_paths=PackedStringArray("body") instance=ExtResource("4_badg0")]
collision_layer = 4
collision_mask = 0
body = NodePath("..")

[node name="CollisionShape2D" parent="KnockbackComponent" index="0" unique_id=1749381845]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ofsxj")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="KnockbackTimer" type="Timer" parent="." unique_id=1300621012]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer" parent="." unique_id=453855887]
unique_name_in_owner = true
stream = ExtResource("5_gc2r6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1052725111]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_1wwld")

[node name="HitBox" type="Area2D" parent="." unique_id=48676307]
position = Vector2(0, 2)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=696899941]
shape = SubResource("CircleShape2D_pmsee")
debug_color = Color(1.6845763e-07, 0.65004927, 0.1302014, 0.41960785)

[connection signal="took_damage" from="DamageComponent" to="." method="_on_damageable_component_took_damage"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="DamageComponent"]
[editable path="KnockbackComponent"]
